Lộ trình JavaWeb

--- a/JavaCore/.vscode/settings.json
+++ b/JavaCore/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.sourcePaths": [
         "LT/Buoi2",
         "LT/Buoi1",
-        "BT/Buoi2"
+        "BT/Buoi2",
+        "LT/Buoi3"
     ]
 }
