--- a/JavaCore/.vscode/settings.json
+++ b/JavaCore/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
     "java.project.sourcePaths": [
-        "BT/Buoi3",
-        // "BT/Buoi2",
-        // "LT/Buoi3",
-        // "LT/Buoi2",
-        // "LT/Buoi1",
+        "BT/Buoi4"
     ]
 }
