Lộ trình JavaWeb

--- a/JavaCore/.vscode/settings.json
+++ b/JavaCore/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "java.project.sourcePaths": [
-        "Hackathon"
+        "BT/Buoi10"
     ],
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.project.referencedLibraries": {
