Lộ trình JavaWeb

--- a/JavaCore/.vscode/settings.json
+++ b/JavaCore/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-    "java.project.sourcePaths": ["LT/Buoi15", "BT/Buoi16"],
+    "java.project.sourcePaths": [
+        "LT/Buoi15",
+        "BT/Buoi16",
+        "Hackathon2"
+    ],
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.project.referencedLibraries": {
         "include": [
