--- a/CTDL/Bt/.vscode/launch.json
+++ b/CTDL/Bt/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Id328_Odd_Even_Linked_List",
+            "request": "launch",
+            "mainClass": "Id328_Odd_Even_Linked_List",
+            "projectName": "Bt_e2e9a55f"
+        },
+        {
+            "type": "java",
             "name": "Launch Id394_Decode_String",
             "request": "launch",
             "mainClass": "Id394_Decode_String",
