--- a/CTDL/Bt/.vscode/launch.json
+++ b/CTDL/Bt/.vscode/launch.json
@@ -6,6 +6,19 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch ListNodeGeneric",
+            "request": "launch",
+            "mainClass": "ListNodeGeneric",
+            "projectName": "Bt_e2e9a55f"
+        },
+        {
+            "type": "java",
+            "name": "Launch Current File",
+            "request": "launch",
+            "mainClass": "${file}"
+        },
+        {
+            "type": "java",
             "name": "Launch Id328_Odd_Even_Linked_List",
             "request": "launch",
             "mainClass": "Id328_Odd_Even_Linked_List",
