--- a/CTDL/Bt/.vscode/settings.json
+++ b/CTDL/Bt/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "java.project.sourcePaths": [
+        "."
+    ]
 }
